tests/ui/type-alias-impl-trait/const_generic_type.no_infer.stderr
error: `Bar` is forbidden as the type of a const generic parameter
  --> $DIR/const_generic_type.rs:8:24
   |
LL | async fn test<const N: crate::Bar>() {
   |                        ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: item does not constrain `Bar::{opaque#0}`, but has it in its signature
  --> $DIR/const_generic_type.rs:8:10
   |
LL | async fn test<const N: crate::Bar>() {
   |          ^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/const_generic_type.rs:5:12
   |
LL | type Bar = impl std::fmt::Display;
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: item does not constrain `Bar::{opaque#0}`, but has it in its signature
  --> $DIR/const_generic_type.rs:8:38
   |
LL |   async fn test<const N: crate::Bar>() {
   |  ______________________________________^
LL | |
LL | |
LL | |
LL | |     #[cfg(infer)]
LL | |     let x: u32 = N;
LL | | }
   | |_^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/const_generic_type.rs:5:12
   |
LL | type Bar = impl std::fmt::Display;
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: unconstrained opaque type
  --> $DIR/const_generic_type.rs:5:12
   |
LL | type Bar = impl std::fmt::Display;
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Bar` must be used in combination with a concrete type within the same module

error: aborting due to 4 previous errors

